# pixel-perfect-depth-review

./: .gitignore  .gitmodules  README.md  benchmark.py  benchmark.slurm  pyproject.toml  requirements.txt  visualize.py
data/: metadata_camera_intrinsics.csv  test_set_entries_names.csv  uv_to_cam.csv
models/: dav2_wrapper.py  heuristic.py  ppd_wrapper.py
notebooks/: dav2_disp.pt  explore.ipynb  ppd_depth.pt  visu3d.ipynb
notebooks/precomputed/: ai_021_001_cam_01_36_dav2_disp.pt  ai_021_001_cam_01_36_ppd_depth.pt  ai_048_010_cam_02_29_dav2_disp.pt  ai_048_010_cam_02_29_ppd_depth.pt  ai_048_010_cam_03_47_dav2_disp.pt  ai_048_010_cam_03_47_ppd_depth.pt
output/: ppd_39338.err  ppd_39338.out
results/: metrics_report.md  results.json
results/precomputed/ai_022_006_cam_00_17/: depth_ppd.pt  disp_dav2.pt  disp_dav2_clean.pt  disp_dav2_cleaned.pt
results/precomputed/ai_048_010_cam_03_47/: depth_ppd.pt  disp_dav2.pt  disp_dav2_cleaned.pt
scripts/: benchmark.py  download.py  download_test_data.py  markdown.py  plot.py
scripts/bench/: benchmark.py  generate_markdown_report.py
scripts/benchmark/: benchmark.py  benchmark.slurm
scripts/download/: download_helper.py  download_models.py  download_test_data.py
scripts/visu/: precompute.py  visu.py  visu.slurm  visualize.py
src/ppdr/models/: __init__.py  dav2_wrapper.py  heuristic.py  interface.py  moge_wrapper.py  ppd_wrapper.py
src/ppdr/utils/: benchmark.py  data_loader.py  dataset.py  geometry.py  heuristic.py  metrics.py  reader.py  transform.py  types.py
src/ppdr/visualization/: __init__.py  plots.py
utils/: data_loader.py  geometry.py  metrics.py
