[project]
name = "ppdr"
version = "0.1.0"
description = "Highlights the contributions of the paper 'Pixel-Perfect Depth with Semantics-Prompted Diffusion Transformers'"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "h5py>=3.14.0",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "open3d>=0.19.0",
    "opencv-python>=4.13.0.92",
    "pillow>=11.3.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "timm==0.9.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "utils3d",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ppdr"]

[tool.uv.sources]
utils3d = { git = "https://github.com/EasternJournalist/utils3d.git", rev = "c5daf6f6c244d251f252102d09e9b7bcef791a38" }

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "ruff>=0.15.8",
]

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "data",
    "checkpoints",
    "src/ppdr/vendor/ppd",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
